--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ section {
     padding: 0 100px 20px 100px;
     display: incline-block;
     border-bottom: 3px solid;
+    display: incline-block;
 }
 
 .primary-border {
