--- a/style.css
+++ b/style.css
@@ -148,7 +148,6 @@ section {
     padding: 0 100px 20px 100px;
     display: incline-block;
     border-bottom: 3px solid;
-    display: incline-block;
 }
 
 .primary-border {
@@ -229,3 +228,14 @@ section {
      line-height: 1.3;
  }
  
+.contact {
+    background-color: #024e76;
+    color: #fce138;
+    text-align: center;
+}
+
+ .contact-info {
+    background-color: #024e76;
+    color: #39a6b2;
+    text-align: center;
+}
